--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Notes
 
 # Ignore my Spotify client id and secret. -- Will move later
 spotify_setup.rb
+omniauth.rb
 
 # Ignore bundler config.
 /.bundle
